revealjssfu.scss
/*-- scss:defaults --*/

@import url('https://fonts.googleapis.com/css2?family=Anton&family=Crimson+Pro:ital,wght@0,200..900;1,200..900&family=Crimson+Text:ital,wght@0,400;0,600;0,700;1,400;1,600;1,700&family=Fira+Sans:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Maven+Pro:wght@400..900&family=Source+Code+Pro:ital,wght@0,200..900;1,200..900&display=swap');

// . fonts

$font-family-sans-serif: 'Fira Sans', sans-serif;
$font-family-monospace: 'Source Code Pro', 'Lucida Console', monospace;

$presentation-font-size-root: 32px;
$presentation-font-smaller: 0.8;

$code-block-font-size: 0.6em;

// $code-block-bg: #f5f5f0;
// $code-block-bg: #2E3440;
$code-block-bg: #15181e;

$code-block-border-color: none !important;

// $code-bg: colour for background of inline code
// $code-color: colour for the font of inline code
// $code-block-bg: colour for background of blocks of code
// $code-block-color: colour for the font of blocks of code
// $code-block-border-color: colour for the border of blocks of code

// . general

.reveal {
  // font-size: 27px !important;
  font-size: 25px !important;
}

.reveal p {
  margin: 25px 0 !important;
  line-height: 1.5 !important;
}

// .. heading

.reveal h1 {
  font-family: 'Anton', sans-serif !important;
  line-height: 5rem !important;
  color: #cc0733 !important;
}

.reveal h2 {
  font-family: 'Anton', sans-serif !important;
  margin-bottom: 17px !important;
  line-height: 3.5rem !important;
  color: #cc0733 !important;
}

.reveal h3 {
  font-family: 'Anton', sans-serif !important;
  margin-top: 30px !important;
  font-size: 1.3em !important;
  color: #404040 !important;
}

.reveal h4 {
  font-size: 1.2em !important;
  color: #4d4d4d !important;
}

.reveal h5 {
  font-size: 1.1em !important;
  color: #595959 !important;
}

.reveal h6 {
  color: #666666 !important;
}

// . title slide

#title-slide .title {
  line-height: 4.6rem !important;
  color: #cc0733;
  font-size: 55px;
  margin-top: 0 !important;
}

#title-slide .subtitle {
  font-family: 'Anton', sans-serif !important;
  font-size: 40px;
  margin-bottom: 1.2rem !important;
}

.reveal .author {
  font-size: 30px;
  line-height: 20px !important;
  margin-top: 1.2rem !important;
  margin-bottom: 1rem !important;
  font-weight: bold;
}

.reveal .institute {
  font-family: 'Anton', sans-serif !important;
  font-size: 30px;
  line-height: 2.7rem !important;
  margin-bottom: 0 !important;
  color: #cc0733;
}

.reveal .date {
  font-size: 25px;
  margin-top: 1rem !important;
  margin-bottom: 0 !important;
}

// . footer

.reveal .footer {
  bottom: -10px !important;
}

.reveal .footer a {
  color: #999999 !important;
  font-weight: 600 !important;
  font-size: 11px;
}

@media(max-width: 991.98px) {
  .reveal .footer a {
    font-size: 0.5rem;
  }
}

.reveal .slide-menu-button .fa-bars::before {
  background-image: url('data:image/svg+xml,<svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="rgb(153, 153, 153)" class="bi bi-list" viewBox="0 0 16 16"><path fill-rule="evenodd" d="M2.5 12a.5.5 0 0 1 .5-.5h10a.5.5 0 0 1 0 1H3a.5.5 0 0 1-.5-.5zm0-4a.5.5 0 0 1 .5-.5h10a.5.5 0 0 1 0 1H3a.5.5 0 0 1-.5-.5zm0-4a.5.5 0 0 1 .5-.5h10a.5.5 0 0 1 0 1H3a.5.5 0 0 1-.5-.5z"/></svg>') !important;
}

.reveal .progress {
  color: #404040 !important;
  height: 0.2em;
}

// .. aside and footnotes

.reveal .slide aside,
.reveal .slide div.aside {
  position: absolute;
  bottom: 20px;
  font-size: 18px !important;
  color: #6f6f6f;
  p {
    margin: 8px 0 !important;
  }
}

.reveal .slide aside .aside-footnotes {
  font-size: 15px;
}

// .. captions

// remove .caption once I have removed my .caption
// div and span in all my presentations
// and have replaced them with using the caption
// directly in the [] of the ![]() of images
.caption {
  font-family: 'Crimson Pro', serif;
  color: #978282;
  font-size: 20px;
  font-style: italic;
  p {
    margin: 0 !important;
    padding: 0 !important;
  }
}

.reveal .slide figure>figcaption {
  font-family: 'Crimson Pro', serif;
  color: #978282;
  text-align: center;
  font-size: 20px;
  font-style: italic;
}

.reveal .slide figure>figcaption,
.reveal .slide img.stretch+p.caption,
.reveal .slide img.r-stretch+p.caption {
  color: #978282;
  font-size: 17px !important;
  font-style: italic;
  margin: -35px 0 0 15px !important;
}

// . img

.reveal img {
  box-shadow: 0px 0px 6px rgba(0,0,0,0.3);
  border-radius: 3px;
  // margin: 12px 0 0 0 !important;
}

.reveal img[alt=noshadow] {
  box-shadow: none;
}

.reveal img[alt=frontlogo] {
  width: 40%;
  margin-top: 30px;
  box-shadow: none;
}

.reveal img[alt=frontlogofooter] {
  width: 35%;
  margin-top: 0;
  box-shadow: none;
}

.reveal .slide-logo {
  display: block;
  position: fixed;
  top: 0px;
  bottom: unset !important;
  right: 0px !important;
  max-width: unset !important;
  // max-height: 80px !important;
  max-height: 4rem !important;
  height: 100%;
  width: 100%;
  box-shadow: none !important;
  border-radius: 0px !important;
}

// . code

.reveal pre code {
  // generic code blocks
  font-size: 22px !important;
  line-height: 1.9rem !important;
  // background-color: #fafbff !important;
  max-height: 520px !important;
}

.reveal pre.sourceCode code {
  // language code blocks
  // default colour for monokai: background-color: #15181e
  background-color: #1f242d !important;
  // max-height: 600px !important;
}

.reveal code {
  // inline code
  font-size: 23px;
  color: #f92672 !important;
}

.reveal div.sourceCode {
  margin-top: 25px !important;
  margin-bottom: 15px !important;
}

.code-with-filename .code-with-filename-file,
.code-with-filename .code-with-filename-file pre {
  padding-bottom: 0px !important;
  padding-left: 0.1em !important;
  background-color: transparent !important;
  font-style: italic;
  font-size: 1.1rem;
  color: #66645b;
}

.reveal .code-with-filename div.sourceCode{
  margin-top: 0;
  border-top-left-radius: 0.25rem !important;
  border-top-right-radius: 0.25rem !important;
}

// . custom div

.def {
  font-family: 'Crimson Text', serif;
  background-color: #eae8f0;
  margin: 2rem 0;
  padding: 1rem 1.8rem 0.3rem 1.8rem;
  line-height: 1.3rem;
  font-size: 1.0rem;
  border: 0.5pt solid #e8e2e9;
  border-radius: 5px;
}

.box {
  font-family: 'Crimson Text', serif;
  margin: 2rem 0;
  padding: 1rem 1.8rem 0.3rem 1.8rem;
  line-height: 1.3rem;
  font-size: 1.0rem;
  border: 1pt solid #e8e2e9;
  border-radius: 5px;
}

.info {
  font-family: 'Crimson Text', serif;
  /* background-color: #eae8f0; */
  background-color: #f0f5f5;
  margin: 2rem 0;
  padding: 1rem 2rem 0.5rem 2rem;
  font-size: 1.1rem;
  border: 1pt solid #669999;
  border-radius: 5px;
}

.note {
  font-family: 'Maven Pro', sans-serif;
  color: #424a57;
  font-size: 22px;
  font-style: italic;
  padding-left: 20px;
  margin: 15px 10px 30px 60px;
  border-left: 3px solid #7b809d;
}

.notenoline {
  font-family: 'Maven Pro', sans-serif;
  color: #424a57;
  font-size: 22px;
  font-style: italic;
  padding-left: 20px;
  margin: 15px 30px 30px 60px;
}

.hnote {
  font-family: 'Maven Pro', sans-serif;
  color: #595959;
  font-size: 22px;
  font-style: italic;
  margin: 0.5rem 0 0 0;
}

.inlinenote {
  font-family: 'Maven Pro', sans-serif;
  color: #424a57;
  font-size: 22px;
  font-style: italic;
  padding: 0 0 0 0.8rem;
}

.example {
  font-family: 'Maven Pro', sans-serif;
  color: #6e7b91;
  font-size: 24px;
  font-style: italic;
  line-height: 31px;
}

.emph {
  font-weight: 600;
  color: orange;
}

.exo {
  color: #424a57;
  border-left: 5px solid #f6903c;
  margin: 45px 50px 45px 20px;
  padding-left: 30px;
}

.exosimple {
  color: #aa5108;
  border-left: 5px solid #f6903c;
  margin: 45px 50px 45px 20px;
  padding-left: 30px;
}

.yourturn {
  color: #f79e55;
  font-weight: bold;
}

.reveal blockquote {
  display: block !important;
  position: relative !important;
  font-size: 23px !important;
  display: block !important;
  position: relative !important;
  color: #a1aaaa !important;
  width: unset !important;
  margin: 12px 0px 12px 50px !important;
  padding: 0px 0px 0px 30px !important;
  border-left: 4px solid #bcc2c2 !important;
  background: none !important;
  box-shadow: none !important;
  font-style: italic !important;
}

// . fragments

.reveal .slides section .fragment {
  opacity: 0;
  visibility: hidden;
  // transition: all none;
  transition: none;
  will-change: opacity;

  &.visible {
    opacity: 1;
    visibility: inherit;
  }

  &.disabled {
    transition: none;
  }
}

.reveal .slides section .fragment.grow {
  opacity: 1;
  visibility: inherit;

  &.visible {
    transform: scale( 1.3 );
  }
}

.reveal .slides section .fragment.shrink {
  opacity: 1;
  visibility: inherit;

  &.visible {
    transform: scale( 0.7 );
  }
}

.reveal .slides section .fragment.zoom-in {
  transform: scale( 0.1 );

  &.visible {
    transform: none;
  }
}

.reveal .slides section .fragment.fade-out {
  opacity: 1;
  visibility: inherit;

  &.visible {
    opacity: 0;
    visibility: hidden;
  }
}

.reveal .slides section .fragment.semi-fade-out {
  opacity: 1;
  visibility: inherit;

  &.visible {
    opacity: 0.5;
    visibility: inherit;
  }
}

.reveal .slides section .fragment.strike {
  opacity: 1;
  visibility: inherit;

  &.visible {
    text-decoration: line-through;
  }
}

.reveal .slides section .fragment.fade-up {
  transform: translate(0, 40px);

  &.visible {
    transform: translate(0, 0);
  }
}

.reveal .slides section .fragment.fade-down {
  transform: translate(0, -40px);

  &.visible {
    transform: translate(0, 0);
  }
}

.reveal .slides section .fragment.fade-right {
  transform: translate(-40px, 0);

  &.visible {
    transform: translate(0, 0);
  }
}

.reveal .slides section .fragment.fade-left {
  transform: translate(40px, 0);

  &.visible {
    transform: translate(0, 0);
  }
}

.reveal .slides section .fragment.fade-in-then-out,
.reveal .slides section .fragment.current-visible {
  opacity: 0;
  visibility: hidden;

  &.current-fragment {
    opacity: 1;
    visibility: inherit;
  }
}

.reveal .slides section .fragment.fade-in-then-semi-out {
  opacity: 0;
  visibility: hidden;

  &.visible {
    opacity: 0.5;
    visibility: inherit;
  }

  &.current-fragment {
    opacity: 1;
    visibility: inherit;
  }
}

// . tables

.reveal table td {
  border-bottom: 0 !important;
}

table caption {
  color: #6a737b;
  font-size: 1.3rem;
}

.right {
  text-align: right !important
}

.small {
  font-size: 1.0rem !important;
}

// . lists

ul {
  list-style-type: "‧ " !important;
  // padding-inline-start: 15px;
}

